--- a/style.css
+++ b/style.css
@@ -3,14 +3,13 @@
 
 body {
     margin: 0;
-    overflow: hidden;
+    padding: 0;
     font-family: "Poppins", sans-serif;
     height: 100vh;
     background-image: url('img/imagemfundo.jpg');
-    background-size:contain;
-    background-position: center top;
+    background-size:cover;
+    background-position: center;
     background-repeat: no-repeat;
-    background-attachment: fixed;
     display: flex;
     flex-direction: column;
 }
