--- a/style.css
+++ b/style.css
@@ -4,25 +4,32 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: "Poppins", sans-serif;
     height: 100vh;
+    overflow: hidden;
+    
+    font-family: "Poppins", sans-serif;
+
+    
     background-image: url('img/imagemfundo.jpg');
     background-size:cover;
     background-position: center;
     background-repeat: no-repeat;
+
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
 }
 
 .container {
     width: 100%;
     max-width: 420px;
     margin: 0 auto;
+
     display: flex;
     flex-direction: column;
     align-items: center;    
+
     padding: 25px 15px;
-    height: 100%;
     color: #fff;
 }
 
@@ -56,7 +63,7 @@ h2 {
     margin-top: 10px;
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 15px;
     width: 100%;
     align-items: center;
 }
@@ -65,7 +72,7 @@ h2 {
     margin-top: 98px;
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 15px;
     width: 100%;
     align-items: center;
 }
@@ -98,10 +105,10 @@ orange {
 }
 
 footer {
-    margin-top: 40px;
     padding-bottom: 15px;
+
     text-align: center;
-    font-size: 12px;
+    font-size: 15px;
     color: white;
     text-shadow: 1px 1px 4px black;
 }
