--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ h1 {
 
 h2 {
     font-size: 14px;
-    margin-top: 8px;
+    margin-top: 28px;
     letter-spacing: 3px;
     text-align: center;
     color: white;
@@ -57,13 +57,15 @@ h2 {
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    padding-bottom: 60px;
 }
 
 .grupo1 {
     margin-top: 10px;
     display: flex;
     flex-direction: column;
-    gap: 15px;
+    gap: 10px;
     width: 100%;
     align-items: center;
 }
@@ -72,7 +74,7 @@ h2 {
     margin-top: 10px;
     display: flex;
     flex-direction: column;
-    gap: 15px;
+    gap: 10px;
     width: 100%;
     align-items: center;
 }
@@ -105,15 +107,28 @@ orange {
 }
 
 footer {
-    padding-bottom: 45px;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 30px;
 
     text-align: center;
     font-size: 12px;
     color: white;
     text-shadow: 1px 1px 4px black;
+
+    padding: 5px 10px;
 }
 
 footer a {
     color: #ffd700;
     text-decoration: none; 
+}
+
+@media (max-heigth:650px) {
+    footer {
+        font-size: 10px;
+        bottom: 5px;
+    }
 }
