--- a/style.css
+++ b/style.css
@@ -1,7 +1,13 @@
 
  @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-body {
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+ body {
     margin: 0;
     padding: 0;
     height: 100vh;
@@ -20,16 +26,27 @@ body {
     justify-content: space-between;
 }
 
-.container {
-    width: 100%;
-    max-width: 420px;
-    margin: 0 auto;
+.fundo {
+    position: fixed;
+    inset: 0;
+    background-image: url("img/imagemfundo.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    z-index: -2;
+}
 
+.app {
+    min-height: 100svh; /* 🔑 viewport correta mobile */
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
+}
+
+.container {    
     align-items: center;    
 
-    padding: 25px 15px;
+    padding: 25px 15px 10px;
     color: #fff;
 }
 
@@ -39,13 +56,12 @@ h1 {
     text-align: center;
     letter-spacing: 2px;
     color: white;    
-    margin: 0;
     text-shadow: 2px 2px 5px black;
 }
 
 h2 {
     font-size: 14px;
-    margin-top: 28px;
+    margin-top: 30px;
     letter-spacing: 3px;
     text-align: center;
     color: white;
@@ -53,7 +69,6 @@ h2 {
 }
 
 .menu {
-    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -107,28 +122,17 @@ orange {
 }
 
 footer {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 30px;
+    margin-top: auto;
 
     text-align: center;
     font-size: 12px;
     color: white;
     text-shadow: 1px 1px 4px black;
 
-    padding: 5px 10px;
+    padding: 12px 10px;
 }
 
 footer a {
     color: #ffd700;
     text-decoration: none; 
-}
-
-@media (max-heigth:650px) {
-    footer {
-        font-size: 10px;
-        bottom: 5px;
-    }
 }
